--- a/exam.html
+++ b/exam.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="title">
-            <h1>Kiểm tra cuối kỳ I</h1>
+            <h1>Phiếu khảo sát</h1>
         </div>
     </header>
 
@@ -19,9 +19,7 @@
         </div>
 
         <div class="time">
-            <p style="font-size: larger;">Thời gian còn lại:</p>
-            <div id="countdown"></div>
-            <input class="btn-submit" type= "submit" id="btn-submit" value="NỘP BÀI">
+            <input class="btn-submit" type= "submit" id="btn-submit" value="Submit">
         </div>
     </div>
 
