--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <input type="text" id="CCCD" name="CCCD" required><br>
                 <label for="address">Address:</label><br>
                 <input type="text" id="address" name="address" required><br>
-                <input type="submit" value="Vào thi" id="submit">
+                <input type="submit" value="Bắt đầu khảo sát" id="submit">
             </form>
             
         </div>
